# algobound

./: Cargo.toml  Plots.py  README.md  bounds.txt  index.html  ionic-job.txt  results.txt  run
src/: main.rs  params.rs  precomp.rs
