[package]
name = "algobound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
